Ajustes Swagger Controllers e Docker Compose
